--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "",
   "homepage": "",
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
@@ -44,6 +45,7 @@
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.3",
     "redux": "^3.5.2",
+    "redux-thunk": "^2.2.0",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
